# python-codespace-template

./: README.md
codespace/: pyproject.toml
codespace/codespace/: __init__.py
