[tool.poetry]
name = "codespace"
version = "0.1.0"
description = ""
authors = ["Farhan Nurdiatama Pakaya <farhan.np9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codespace = "codespace:main"